assets/css/main.css
/* ... */
/** sizes **/
header h1 {
  font-size: 4.8rem;
  line-height: 4.8rem;
}
header p {
  font-size: 1.6rem;
  line-height: 3.0rem;
}

main, footer a, footer li, summary {
  font-size: 1.4rem;
  line-height: 2.6rem;
}

main h1 {
  font-size: 4.0rem;
  line-height: 4.0rem;
}
main h2  {
  font-size: 2.6rem;
  line-height: 2.6rem;
}

main h3, footer li h1, nav ul {
  font-size: 2.0rem;
  line-height: 2.2rem;
}

main intro {
  font-size: 1.6rem;
  line-height: 3.0rem;
}

main blockquote {
  font-size: 2.2rem;
  line-height: 3.2rem;
}

summary > p {
  margin-top: 0px;
}

/* fonts */
@font-face {
    font-family: BebasNeueBold;
    src: url(/assets/fonts/BebasNeue-Regular.woff2);
}
/* from https://github.com/IBM/plex/tree/master/IBM-Plex-Mono/fonts/complete/woff */
@font-face {
    font-family: IBMPlexMono;
    src: url(/assets/fonts/IBMPlexMono-Regular.ttf);
}

@font-face {
    font-family: IBMPlexSans;
    src: url(/assets/fonts/IBMPlexSans-Regular.ttf);
}

@font-face {
    font-family: IBMPlexMono-LightItalic;
    src: url(/assets/fonts/IBMPlexMono-Lightitalic.ttf);
}

header h1, main h1, main h2, main h3, nav, footer li h1, footer li h2 {
  font-family: BebasNeueBold, Oswald, sans-serif;
}

header p, footer a, footer li {
  font-family: IBMPlexMono, "Roboto Mono", monospace;
}

main {
  font-family: IBMPlexSans, Roboto, sans-serif;
}

main blockquote {
  font-family: IBMPlexMono-LightItalic;
}

/* colors */
.green-layout header {
  background: #72F6B2;
}
.green-layout header, .green-layout nav a {
  color: #353535;
}

.blue-layout header {
  background: #017FFD;
}

.blue-layout header, .blue-layout nav a {
  color: white;
}

.black-layout header {
  background: #353535;
}

.black-layout header, .black-layout nav a {
  color: #72F6B2;
}

.green-layout header h1 {
  color: #353535;
  border-color: #353535;
}

.blue-layout header h1 {
  border-color: white;
}

.black-layout header h1 {
  border-color: #72F6B2;
}

.black-layout header p {
  color: white;
}

main h1 {
  color: #017FFD;
  border-color: #017FFD;
}

main a {
  color: #017FFD;
  text-decoration: underline;
  text-underline-offset: 2px;
}

main h1 a, main h2 a, main h3 a, main .bluebutton,
main .partner-block a, main .carousel-card a {
  text-decoration: none;
}

main h2, main h3 {
  color: #353535;
}

/* site nav */
/* toggle for the menu when on small screens, works like a checkbox */
#menu {
  display:none;
}
#menu + label {
  cursor:pointer;
}
#menu:checked ~ ul {
  flex-direction: column;
  background: #017FFD;
  border-radius: 8px;
  padding: 10px;
  border: 2px solid white;
  position: absolute;
  right: 0;
  top: 100%;
  z-index: 9999;
  width: auto;
}
#menu:checked ~ ul li {
  display: block;
  padding-top: 0.6rem;
  text-align: right;
}
#menu:checked ~ ul li:first-child {
  margin-right: 0;
}

@media (min-width: 67em) {
  #menu:not(:checked) ~ ul li,
  #menu:checked ~ ul li {
    display: inline-block;
  }
  #menu:checked ~ ul {
    position: static;
    flex-direction: row;
    background: none;
    border: none;
    padding: 0;
    border-radius: 0;
    width: auto;
  }
  label[for=menu] {
    display: none;
  }
  nav li:first-child {
    padding-left: 0px;
  }
}

nav {
  margin: 0px;
  position: relative;
}

nav a {
    text-decoration: none;
}

nav ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  text-align: right;
  margin-top: 0px;
}

nav li {
  text-align:right;
}

nav ul li:first-child
{
  margin-right: auto;
}

#logo {
  background-repeat: no-repeat;
  float: left;
}

/* article  */
.green-layout header, .blue-layout header, .black-layout header {
  margin: 0px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  padding-top: 2.4rem;
}

header .content {
  position: relative;
  z-index: 1;
  color: white; /* adjust based on wallpaper */
}

header .wallpaper {
  position: absolute;
  inset: 0;
  background-size: cover;      /* or contain/repeat for wallpaper look */
  background-position: center;
  opacity: 0.4;                      /* fade the wallpaper */
  z-index: 0;
}


/* footer */
footer {
  display: flex;
  flex-wrap: wrap;
  flex-basis: auto;
  justify-content: space-evenly;
  background: #353535;
  color: #72F6B2;
}

footer ul {
  padding-left: 0px;
}

footer li {
  display: block;
}

footer li h2 {
  color: #72F6B2;
}

footer a, footer li {
  color: white;
  font-weight: normal;
}

/** to deal with the image in the title we must have title flowing over the image in the header */
header {
  position: relative;
}
.titlebox {
  position: absolute;
  bottom: 0px;
}

.bluebutton {
  display:inline-block;
  background: #017FFD;
  color: white;
  padding-left: 2.4rem;
  padding-right: 2.4rem;
  padding-bottom: 1.6rem;
  padding-top: 1.6rem;
  margin-bottom: 1.6rem;
  text-decoration: none;
  cursor: pointer;
}
.bluebutton:hover {
  background: #0066cc;
}

.partner-logo {
  float:right;
  max-height: 2em;
  max-width: 3em;
  object-fit: contain;
  margin-left: 10px;
}

.partner-grid {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-end; /* Align items to the bottom */
  justify-content: center;
  gap: 2em;
  margin: 2em auto;
}
.partner-block {
  text-align: center;
  width: 150px;
  height: 100px;
  object-fit: contain;
  display: flex;
  flex-direction: column;
  justify-content: flex-end; /* Push content to the bottom */
  position: relative; /* ← added for tooltip positioning */
}
.partner-block img {
  max-height: 1.8em;
  max-width: 7em;
  margin-bottom: 0.5em;
}
.partner-block a {
  display: flex;
  flex-direction: column;
  align-items: center;
}
/* ... */

